--- a/templates/students/student_list.html
+++ b/templates/students/student_list.html
@@ -47,7 +47,7 @@
             <label for="age">Age:</label>
             <input type="number" id="age" name="age" required>
             <br><br>
-            <input type="button" value="Add Student">
+            <input type="submit" value="Add Student">
         </form>
     </div>
 
